<resources>
    <string name="app_name">Electric Car</string>
    <string name="cars">Cars</string>
    <string name="favorites">Favorites</string>
    <string name="price">Price</string>
    <string name="battery">Battery</string>
    <string name="power">Power</string>
    <string name="charge">Charge</string>
    <string name="price_kwh">Price kWh</string>
    <string name="km_traveled">Km traveled</string>
    <string name="calculate">Calculate</string>
    <string name="calculate_autonomy">Calculate Autonomy</string>
    <string name="no_connection">Ops, unavailable connection :(</string>
    <string name="response_error">Something got wrong, please try again later</string>
    <string name="saved_calc">saved_calc</string>

</resources>