<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_car"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="24dp"
        android:elevation="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tab_favorites">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_card_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eletric_car"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/price"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_image"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_price_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body1"
                android:text="$ 200,000.00"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_image"
                app:layout_constraintStart_toEndOf="@+id/tv_price" />

            <TextView
                android:id="@+id/tv_battery"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/battery"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_price"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_battery_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body1"
                android:text="300 kWh"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="@+id/tv_battery"
                app:layout_constraintStart_toEndOf="@+id/tv_battery" />

            <TextView
                android:id="@+id/tv_power"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/power"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_battery"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_power_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginStart="16dp"
                android:text="300 hp"
                app:layout_constraintTop_toTopOf="@+id/tv_power"
                app:layout_constraintStart_toEndOf="@+id/tv_power" />

            <TextView
                android:id="@+id/tv_charge"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/charge"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toBottomOf="@id/tv_power"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_charge_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                android:text="23 min"
                app:layout_constraintTop_toTopOf="@+id/tv_charge"
                app:layout_constraintStart_toEndOf="@+id/tv_charge"
                app:layout_constraintBottom_toBottomOf="@id/cl_card_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        android:text="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_tab_cars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Body2"
        android:text="@string/cars"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_tab_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.AppCompat.Body2"
        android:text="@string/favorites"
        android:textStyle="bold"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/tv_tab_cars"
        app:layout_constraintTop_toTopOf="@id/tv_tab_cars" />

    <Button
        android:id="@+id/btn_redirect_calculate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="Calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>